feat: 完成聊天机器人功能、PDF下载管理和滚动优化
- 实现聊天机器人功能，使用 OpenRouter API 和 qwen/qwen3-30b-a3b 模型
- 添加权限控制：只有购买 complete-package 或 chatbot_access 的用户可以使用
- 支持 Markdown 渲染和流式输出
- 优化聊天页面滚动逻辑，避免强制滚动到底部
- 创建 PDF 下载表和相关 API
- 实现 PDF 预览和下载功能
- 添加权限提示和错误处理

--- a/i18n/messages/zh.json
+++ b/i18n/messages/zh.json
@@ -149,8 +149,13 @@
       "title": "PDF 指南",
       "description": "下载全面的指南，帮助您在中国旅游",
       "downloading": "下载中...",
+      "download": "下载",
       "download_success": "下载已开始",
       "error": "下载PDF失败，请重试",
+      "preview": "预览",
+      "no_pdfs": "暂无PDF文件",
+      "no_description": "暂无描述",
+      "to_download": "以下载",
       "payment_guide": {
         "title": "支付设置指南",
         "description": "为国际游客提供的支付宝和微信支付完整设置指南",
@@ -170,7 +175,12 @@
       "thinking": "思考中...",
       "error": "抱歉，出现了错误。请重试。",
       "no_access": "请购买访问权限以使用聊天机器人",
-      "buy_access": "购买访问权限"
+      "buy_access": "购买访问权限",
+      "purchase_required": "请购买完整套餐以使用聊天机器人",
+      "purchase_message": "您需要购买完整套餐才能使用聊天机器人功能",
+      "upgrade_required": "请升级到完整套餐以使用聊天机器人",
+      "upgrade_message": "您已购买基础套餐，请升级到完整套餐以使用聊天机器人功能",
+      "upgrade": "升级套餐"
     },
     "products": {
       "title": "旅游服务",
